(2025-11-21) 일단 대피선